--- a/everest/css/main.css
+++ b/everest/css/main.css
@@ -36,10 +36,15 @@
     /* position: absolute; */
     position: fixed;
     width: 100%;
+    z-index: 1;
   }
   
   .logo {
     margin-right: auto;
+  }
+
+  .logo img{
+    width: 40px;
   }
 
   .sign {
@@ -54,7 +59,7 @@
   
   .menu {
     display: flex; 
-    gap: 60px;  
+    gap: 60px;
   }
 
   .menu a {
@@ -106,7 +111,7 @@
 
   .title h2 {
     font-family: 'Dancing Script', cursive;
-    font-size: 80px;
+    font-size: 100px;
   }
 
   .title p {
@@ -139,7 +144,21 @@
   /* 반응형 */
   @media (max-width: 768px) {
     .menu {
-      display: none;
+      position: absolute;
+      flex-direction: column;
+      background-color: rgba(0, 0, 0, 0.8);
+      width: 100%;
+      height: 100vh;
+      top: 0;
+      left: 100%;
+      padding: 40px;
+      padding-top: 100px;
+      gap: 20px;
+      transition: left 0.6s;
+    }
+
+    .active {
+      left: 0;
     }
 
     .title h2 {
@@ -162,6 +181,7 @@
 
     .bars {
       display: block;
+      z-index: 1;
     }
   }
 
