--- a/everest/css/main.css
+++ b/everest/css/main.css
@@ -23,12 +23,22 @@
   
   .container {
     height: 100vh;
-    background-image: url("../images/main1.jpg");
+    /* background-image: url("../images/main1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: center; */
   }
   
+video{
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+}
+
   .header {
     display: flex;
     align-items: center;
